deployment/devtool/gateway/2-ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  rules:
    - host: spring.microservice.com
      http:
        paths:
          - path: /cards/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: card-service
                port:
                  number: 80

          - path: /accounts/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-service
                port:
                  number: 80

          - path: /locations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: location-service
                port:
                  number: 80

          - path: /addresses/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: address-service
                port:
                  number: 80

          - path: /persons/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: person-service
                port:
                  number: 80

          - path: /currency-conversion/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: currency-conversion
                port:
                  number: 8282

          - path: /currency-exchange/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: currency-exchange
                port:
                  number: 8181

          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: person-service
                port:
                  number: 80
