deployment/devtool/gateway/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: person-service
                port:
                  number: 80

          - path: /cards/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: card-service
                port:
                  number: 80

          - path: /accounts/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: account-service
                port:
                  number: 80

          - path: /locations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: location-service
                port:
                  number: 80

          - path: /addresses/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: address-service
                port:
                  number: 80

          - path: /persons/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: person-service
                port:
                  number: 80
